---------------------------------------------------------------------------------------------------
Version: 1.7.2
Date: ???
  Features:
    - Changed arrow sprite to one from Better Alert Arrows (let me know if you have a better suggestion for an arrow sprite)
    - Added 'Clear highlights when closing interface' setting to control whether the highlight boxes and arrow are removed when the interface is closed
    - Added 'Highlight duration' setting to control the length of time that the highlight boxes and arrow exist for
    - Added 'Zoom level' setting to control initial zoom when viewing results
  Changes:
    - Default zoom level is now much less zoomed in
  Compatability:
    - Fixed arrow disappearing when activating jetpack
---------------------------------------------------------------------------------------------------
Version: 1.7.1
Date: 14 June 2022
  Features:
    - Fixed crash when searching for fluids in 'Storage' mode
---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 2 June 2022
  Features:
    - Added 'Module' search option to search for modules in machines
    - Added arrow pointing from player to highlighted results
    - Added icon to character corpse to differentiate it from a living character in search results (thanks Earendel for the icon!)
    - 'All surfaces' checkbox is now hidden when there is only one surface in the game
    - Optimised search time by ≈20% when many search modes are enabled
  Bugfixes:
    - Fixed results not opening when viewing the map whilst in Navigation Satellite
    - Fixed interface not responding to E (close) after opening results in Navigation Satellite (waiting for SE to fix this properly)
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 25 May 2022
  Bugfixes:
    - Fixed crash when searching multiple surfaces