@@ -26,6 +26,7 @@ no-results=No results found
 incorrect-config=At least one checkbox must be selected
 wrong-surface=Can't open map on a different surface
 invalid-item=Selected object must be an item, fluid, or signal
+distance-tooltip=Distance
 module-count-tooltip=Module count
 request-count-tooltip=Request count
 signal-count-tooltip=Signal count
